# sqlflow_public

./: .gitignore  LICENSE  README.md  README_CN.md  data-lineage-xml-elements.md  dbobjects_relationship.md  embedding_sqlflow.md  install_sqlflow.md  install_sqlflow_on_mac.md  install_sqlflow_on_windows.md  json_output.md  json_output_objects_coordinate.md  pyproject.toml  requirements.txt  sqlflow-search-table-column.md  sqlflow-team-system.md  sqlflow-userid-secret.md  sqlflow_architecture.md  sqlflow_components.md  sqlflow_faq.md  sqlflow_guide.md  sqlflow_guide_cn.md  sqlflow_introduce.md  sqlflow_pricing_plans.md  sqlflow_privacy-policy.md  sqlflow_terms.md  use_sqlflow_in_your_flavor_ways.md
.cursor/rules/: git-commit-styleguide.mdc  refine-data-lineage-docs.mdc
.github/workflows/: deploy-docs.yml  main.yml
api/: DataLineageParser.java  DataLineageParser.py  HttpClient.php  firstdemo.py  readme.md  sqlflow-job-api-tutorial.md  sqlflow_api.md  sqlflow_api_tutorial.md  sqlflow_web_ui_control.md
api/csharp/: SQLFlowClient.sln  readme.md
api/curl/: readme.md
api/java/: DataLineageParser.java  MANIFEST-windwos.MF  compile.bat  compile.sh  java-data-lineage-sqlserver.sql  pom.xml  readme.md
databases/: connect-to-databases.md  readme.md
doc/: 3 types of data lineage models.md  Data lineage model reference.md  Indirect dataflow_ group by.md  a-column-level-data-lineage-model.docx  data-lineage-analysis-command-line-tool.md  how to merge data lineage.md  readme.md  readme.txt  the column-level lineage.md  the complete data lineage.md  the table-level lineage.md
grabit/: readme.md
gudu_sql_omni/: LICENSE  README.md
linux/: backend.sh  eureka.sh  gspLive.sh  monitor.sh  sqlservice.sh  stop.sh
mac/: eureka.sh  gspLive.sh  sqlservice.sh
site-docs/: mkdocs.yml
sqlflowjs/: config.private.json  index.html  sqlflow.css  sqlflow.js  sqlflow.js_get_start.html
tests/: conftest.py  test_infrastructure_validation.py
widget/: index.html  jquery.min.js  sqlflow.widget.3.6.2.js
windows/: backend.bat  eureka.bat  eureka.vbs  gspLive.bat  gspLive.vbs  monitor.bat  sqlservice.bat  sqlservice.vbs  stop.bat
(+244 files in other folders)
